[tool.poetry]
name = "fastapi-login"
version = "0.1.0"
description = ""
authors = ["Sascha Dorenbeck <parsd@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
email-validator = "^1.0.5"
fastapi = "^0.52.0"
passlib = {version = "^1.7.2", extras = ["bcrypt"]}
pydantic = "^1.4"
python-multipart = "^0.0.5"
starlette = "^0.13.2"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
assertpy = "^1.0"
black = {version = "^19.10b0", allow-prereleases = true}
coverage = "^5.0.3"
mypy = "^0.761"
pydocstyle = "^5.0.2"
pylint = "^2.4.4"
pytest = "^5.3.5"
pytest-mock = "^2.0.0"
pytest-clarity = "^0.3.0-alpha.0"
requests = "^2.23.0"
