[tool.poetry]
name = "fastapi_login"
version = "0.1.0"
description = "My users route for logging in and out of a FastAPI app."
authors = ["Sascha Dorenbeck <parsd@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/parsd/fastapi-login"
repository = "https://github.com/parsd/fastapi-login"
keywords = ["fastapi", "security", "login"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
email-validator = "^1.0.5"
fastapi = ">=0.61"
pydantic = "^1.4"
python-multipart = "0.*"
starlette = "^0.13.2"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
assertpy = "^1.0"
black = {version = "^19.10b0", allow-prereleases = true}
coverage = "^5.0.3"
mypy = "0.*"
pydocstyle = "^5.0.2"
pylint = "^2.4.4"
pytest = "^6.0"
pytest-clarity = "^0.3.0-alpha.0"
requests = "^2.23.0"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
